PROJECT(Tracker)

cmake_minimum_required(VERSION 2.0)

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

SET(SRCS helpers.h itkBinaryThinningImageFilter3D.h ftkTrackFeatures.h itkBinaryThinningImageFilter3D.h itkBinaryThinningImageFilter3D.txx)

ADD_LIBRARY(trackingHelpers helpers.cpp helpers.h)
ADD_LIBRARY(ftkTrackFeatures ftkTrackFeatures.h ftkTrackFeatures.cpp)

ADD_EXECUTABLE(unmix unmix.cpp helpers.h)
ADD_EXECUTABLE(segmentation segmentation.cpp helpers.h)
ADD_EXECUTABLE(tracking tracking.cpp helpers.h ftkTrackFeatures.h)
ADD_EXECUTABLE(vessel_thinning vessel_thinning.cpp ${SRCS})
ADD_EXECUTABLE(summary summary.cpp helpers.h ftkTrackFeatures.h)
ADD_EXECUTABLE(background_subtraction background_subtraction.cpp helpers.h)
ADD_EXECUTABLE(extract_slices extract_slices.cpp helpers.h)
ADD_EXECUTABLE(medianfilter medianfilter.cpp helpers.h)
ADD_EXECUTABLE(anisodiff anisodiff.cpp helpers.h)
ADD_EXECUTABLE(tracklog tracklog.cpp helpers.h)
ADD_EXECUTABLE(render_tracks render_tracks.cpp helpers.h)

TARGET_LINK_LIBRARIES(unmix ITKCommon ITKIO Yousef_Nucleus_Seg ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(segmentation ITKCommon ITKIO Yousef_Nucleus_Seg ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(tracking ITKCommon ITKIO Yousef_Nucleus_Seg ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(vessel_thinning ITKCommon ITKIO Yousef_Nucleus_Seg ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(summary ITKCommon ITKIO Yousef_Nucleus_Seg ITKStatistics trackingHelpers ftkTrackFeatures)
TARGET_LINK_LIBRARIES(background_subtraction ITKCommon ITKIO Yousef_Nucleus_Seg ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(extract_slices ITKCommon ITKIO Yousef_Nucleus_Seg ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(anisodiff ITKCommon ITKIO ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(medianfilter ITKCommon ITKIO ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(tracklog ITKCommon ITKIO ITKStatistics trackingHelpers)
TARGET_LINK_LIBRARIES(render_tracks ITKCommon ITKIO ITKStatistics ITKBasicFilters trackingHelpers vtkVolumeRendering vtkRendering vtkCommon vtkIO vtksys vtkFiltering vtkHybrid)


INSTALL(TARGETS unmix RUNTIME DESTINATION bin)
INSTALL(TARGETS segmentation RUNTIME DESTINATION bin)
INSTALL(TARGETS tracking RUNTIME DESTINATION bin)
INSTALL(TARGETS vessel_thinning RUNTIME DESTINATION bin)
INSTALL(TARGETS summary RUNTIME DESTINATION bin)
INSTALL(TARGETS background_subtraction RUNTIME DESTINATION bin)
INSTALL(TARGETS extract_slices RUNTIME DESTINATION bin)
INSTALL(TARGETS anisodiff RUNTIME DESTINATION bin)
INSTALL(TARGETS medianfilter RUNTIME DESTINATION bin)
INSTALL(TARGETS tracklog RUNTIME DESTINATION bin)
INSTALL(TARGETS render_tracks RUNTIME DESTINATION bin)

