PROJECT(Tracker)

cmake_minimum_required(VERSION 2.0)

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

FIND_PACKAGE(CPLEX)
FIND_PACKAGE(CONCERT)
IF(CPLEX_FOUND)
	INCLUDE_DIRECTORIES(${CPLEX_INCLUDE_DIRS})
ENDIF(CPLEX_FOUND)
IF(CONCERT_FOUND)
	INCLUDE_DIRECTORIES(${CONCERT_INCLUDE_DIRS})
ENDIF(CONCERT_FOUND)
ADD_DEFINITIONS(-DIL_STD)
find_package( Boost)

include_directories ( ${Boost_INCLUDE_DIRS} )

IF(WIN32)
	SET(WSOCK_WIN wsock32)
ELSE(WIN32)
	SET(WSOCK_WIN )
ENDIF(WIN32)

SET(SRCS helpers.h itkBinaryThinningImageFilter3D.h ftkTrackFeatures.h itkBinaryThinningImageFilter3D.h itkBinaryThinningImageFilter3D.txx)

ADD_LIBRARY(trackingHelpers helpers.cpp helpers.h)
ADD_LIBRARY(ftkTrackFeatures ftkTrackFeatures.h ftkTrackFeatures.cpp)

ADD_EXECUTABLE(unmix unmix.cpp helpers.h)
#ADD_EXECUTABLE(unmixt unmix_threshold.cpp helpers.h)
ADD_EXECUTABLE(segmentation segmentation.cpp helpers.h)
ADD_EXECUTABLE(threshold_segmentation threshold_segmentation.cpp helpers.h)
ADD_EXECUTABLE(compute_extra_associations compute_extra_associations.cpp helpers.h)
ADD_EXECUTABLE(tracking tracking.cpp helpers.h ftkTrackFeatures.h)
ADD_EXECUTABLE(remove_small_components remove_small_components.cpp helpers.h)
IF(CPLEX_FOUND)
	ADD_EXECUTABLE(tracking_multiframe tracking_multiframe.cpp helpers.h ftkTrackFeatures.h)
ENDIF(CPLEX_FOUND)
ADD_EXECUTABLE(vessel_thinning vessel_thinning.cpp ${SRCS})
ADD_EXECUTABLE(summary summary.cpp helpers.h ftkTrackFeatures.h)
ADD_EXECUTABLE(background_subtraction background_subtraction.cpp helpers.h)
ADD_EXECUTABLE(contrast_enhancement contrast_enhancement.cpp helpers.h)
ADD_EXECUTABLE(extract_slices extract_slices.cpp helpers.h)
ADD_EXECUTABLE(medianfilter medianfilter.cpp helpers.h)
ADD_EXECUTABLE(anisodiff anisodiff.cpp helpers.h)
#ADD_EXECUTABLE(tracklog tracklog.cpp helpers.h)
ADD_EXECUTABLE(render_tracks render_tracks.cpp helpers.h)

TARGET_LINK_LIBRARIES(trackingHelpers    ftkFeatures     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(unmix   Yousef_Nucleus_Seg  trackingHelpers     ${ITK_LIBRARIES} )
#TARGET_LINK_LIBRARIES(unmixt   Yousef_Nucleus_Seg  trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(segmentation   Yousef_Nucleus_Seg  trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(threshold_segmentation    trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(compute_extra_associations    trackingHelpers  ftkCommon ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(tracking   Yousef_Nucleus_Seg  trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(remove_small_components trackingHelpers)
#IF(BUILD_EMBREX)
#	SET( LIB_KPLS libKPLS )
#ENDIF(BUILD_EMBREX)
IF(CPLEX_FOUND)
	TARGET_LINK_LIBRARIES(tracking_multiframe   Yousef_Nucleus_Seg  trackingHelpers ${CONCERT_LIBRARIES} ${CPLEX_LIBRARIES} ${WSOCK_WIN} ${LIB_KPLS} ${ITK_LIBRARIES} )
ENDIF(CPLEX_FOUND)
TARGET_LINK_LIBRARIES(vessel_thinning   Yousef_Nucleus_Seg  trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(summary   Yousef_Nucleus_Seg  trackingHelpers ftkTrackFeatures     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(background_subtraction   Yousef_Nucleus_Seg  trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(extract_slices   Yousef_Nucleus_Seg  trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(anisodiff    trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(contrast_enhancement    trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(medianfilter    trackingHelpers     ${ITK_LIBRARIES} )
#TARGET_LINK_LIBRARIES(tracklog    trackingHelpers     ${ITK_LIBRARIES} )
TARGET_LINK_LIBRARIES(render_tracks     trackingHelpers  ${ITK_LIBRARIES} )


INSTALL(TARGETS unmix RUNTIME DESTINATION ${INSTALL_BIN_DIR})
#INSTALL(TARGETS unmixt RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS segmentation RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS threshold_segmentation RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS compute_extra_associations RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS tracking RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS remove_small_components RUNTIME DESTINATION ${INSTALL_BIN_DIR})
IF(CPLEX_FOUND)
	INSTALL(TARGETS tracking_multiframe RUNTIME DESTINATION ${INSTALL_BIN_DIR})
ENDIF(CPLEX_FOUND)
INSTALL(TARGETS vessel_thinning RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS summary RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS background_subtraction RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS extract_slices RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS anisodiff RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS contrast_enhancement RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS medianfilter RUNTIME DESTINATION ${INSTALL_BIN_DIR})
#INSTALL(TARGETS tracklog RUNTIME DESTINATION ${INSTALL_BIN_DIR})
INSTALL(TARGETS render_tracks RUNTIME DESTINATION ${INSTALL_BIN_DIR})

